--- a/app/src/main/res/layout/fragment_restaurant_menu.xml
+++ b/app/src/main/res/layout/fragment_restaurant_menu.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RestaurantMenuFragment"
+    tools:context=".Fragment.RestaurantMenuFragment"
     android:id="@+id/frameLayout4"
     android:background="@color/dark_blue">
 
