--- a/app/src/main/res/navigation/nav_cells.xml
+++ b/app/src/main/res/navigation/nav_cells.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/homeFragment2"
-        android:name="com.example.mealz.HomeFragment"
+        android:name="com.example.mealz.Fragment.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" >
         <action
@@ -16,7 +16,7 @@
     </fragment>
     <fragment
         android:id="@+id/restaurantMenuFragment2"
-        android:name="com.example.mealz.RestaurantMenuFragment"
+        android:name="com.example.mealz.Fragment.RestaurantMenuFragment"
         android:label="fragment_restaurant_menu"
         tools:layout="@layout/fragment_restaurant_menu" >
         <action
@@ -25,7 +25,7 @@
     </fragment>
     <fragment
         android:id="@+id/menuItemDetailsFragment2"
-        android:name="com.example.mealz.MenuItemDetailsFragment"
+        android:name="com.example.mealz.Fragment.MenuItemDetailsFragment"
         android:label="fragment_menu_item_details"
         tools:layout="@layout/fragment_menu_item_details" >
         <action
@@ -34,7 +34,7 @@
     </fragment>
     <fragment
         android:id="@+id/cartFragment2"
-        android:name="com.example.mealz.CartFragment"
+        android:name="com.example.mealz.Fragment.CartFragment"
         android:label="fragment_cart"
         tools:layout="@layout/fragment_cart" />
 </navigation>
