--- a/app/src/main/res/navigation/menu_graph.xml
+++ b/app/src/main/res/navigation/menu_graph.xml
@@ -14,6 +14,10 @@
             android:id="@+id/action_cartFragment_to_logIn"
             app:destination="@id/logIn"
             app:popUpTo="@id/cartFragment" />
+        <action
+            android:id="@+id/action_cartFragment_to_mainActivity"
+            app:destination="@id/mainActivity"
+            app:popUpTo="@id/cartFragment" />
     </fragment>
 
     <fragment
@@ -58,4 +62,9 @@
         android:id="@+id/logIn"
         android:name="com.example.mealz.LogIn"
         android:label="LogIn" />
+    <activity
+        android:id="@+id/mainActivity"
+        android:name="com.example.mealz.MainActivity"
+        android:label="activity_main"
+        tools:layout="@layout/activity_main" />
 </navigation>
