--- a/app/src/main/res/layout/cart_items_layout.xml
+++ b/app/src/main/res/layout/cart_items_layout.xml
@@ -23,6 +23,18 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <TextView
+                android:id="@+id/category"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:fontFamily="@font/poppins_regular"
+                android:text="TextView"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                app:layout_constraintStart_toStartOf="@+id/Name"
+                app:layout_constraintTop_toBottomOf="@+id/Name" />
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/roundCardView"
                 android:layout_width="114dp"
@@ -64,14 +76,14 @@
                 android:id="@+id/Price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="25dp"
                 android:fontFamily="@font/poppins_regular"
                 android:text="TextView"
                 android:textColor="@color/white"
-                android:textSize="14sp"
+                android:textSize="12sp"
+                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@+id/Name"
-                app:layout_constraintTop_toBottomOf="@+id/Name" />
-
+                app:layout_constraintTop_toBottomOf="@+id/category" />
 
             <ImageButton
                 android:id="@+id/imageButton"
