--- a/app/src/main/res/layout/fragment_menu_item_details.xml
+++ b/app/src/main/res/layout/fragment_menu_item_details.xml
@@ -105,6 +105,7 @@
                 android:text="TextView"
                 android:textColor="@color/lighter"
                 android:textSize="12sp"
+                android:maxWidth="340dp"
                 app:layout_constraintStart_toStartOf="@id/Category"
                 app:layout_constraintTop_toBottomOf="@+id/Category" />
 
