--- a/app/src/main/res/layout/menu_items_layout.xml
+++ b/app/src/main/res/layout/menu_items_layout.xml
@@ -79,7 +79,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:fontFamily="@font/poppins_regular"
-                android:text="Ingredients:"
+                android:text="Bon appetit"
                 android:textColor="@color/white_grey"
                 android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="@+id/Category"
@@ -115,11 +115,11 @@
                 android:layout_marginRight="12dp"
                 android:layout_marginBottom="8dp"
                 android:fontFamily="@font/poppins_medium"
-                android:text="4.5"
+                android:text="1000"
                 android:textColor="@color/white"
                 android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintEnd_toEndOf="parent" />
 
 
 
